# DeOpenRouter

./: .gitignore  DeOpenRouter — Presentation.html  DeOpenRouter.md  LICENSE  README.md  README.zh-CN.md
apps/api/: .env.example  package-lock.json  package.json  tsconfig.json
apps/api/src/: auditLoop.ts  auditReportCache.ts  canonicalJson.test.ts  canonicalJson.ts  index.ts
apps/audit-server/: README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
apps/audit-server/src/: main.py
apps/audit-server/src/deopenrouter_audit/: __init__.py  canonical.py  client.py  context.py  error_leakage.py  identity.py  models.py  orchestrator.py  recorder.py  reporter.py  risk.py  steps_runtime.py  stream_integrity.py  tool_substitution.py  transparent_log.py
apps/audit-server/src/deopenrouter_audit/web3/: __init__.py  injection_probes.py
apps/audit-server/tests/: test_canonical.py  test_health.py  test_no_external_audit_import.py  test_risk.py
apps/web/: .env.local.example  README.md  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx  (+1 more)
contracts/: .env.example  LOCAL_LOOP.md  README.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: DeOpenRouterMarketplace.sol
contracts/test/: DeOpenRouterMarketplace.t.sol
docs/: AUDIT_GOVERNANCE.md  DEMO_RUN.zh-CN.md  TRUST_LAYERS.md
docs/superpowers/plans/: 2026-04-14-deopenrouter-mvp.md
presentation/: DeOpenRouter-Course-Presentation.pptx  DeOpenRouter-Speech-Script.md  deopenrouter-slides-en.html  deopenrouter-slides.html  generate_deopenrouter_slides.py
(+43 files in other folders)
