[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deopenrouter-audit-server"
version = "0.1.0"
description = "DeOpenRouter API security audit service (deopenrouter_audit + FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["deopenrouter_audit*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
